--- a/example/_layouts/wrapper.html
+++ b/example/_layouts/wrapper.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <title>Example Site</title>
+    <link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
 <body>
-    <%- content %>
+    <div id="container">
+        <%- content %>
+    </div>
 </body>
 </html>
